manifests/base/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: "janus-idp" 
spec:
  tls:
    - hosts: 
      - son.apps.ci-ln-tzfgntb-76ef8.aws-2.ci.openshift.org
      secretName: sonarqube-cert
  rules:
    - host: son.aapps.ci-ln-tzfgntb-76ef8.aws-2.ci.openshift.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
